# Reversi

./: CMakeLists.txt  Player.h  main.cpp
